--- a/아이디어톤/writing/w-index.html
+++ b/아이디어톤/writing/w-index.html
@@ -11,16 +11,29 @@
 <body>
     <div class="head-section">
         <div class="head-s-c">
-            <div class="logo"></div>
-            <div class="saveTem"></div>  
-            <div class="saveCom"></div> 
+            <div class="logo">like lion</div>
+            <div id="savingButton" class="saveTem">임시등록</div>  
+            <div id="savingButton" class="saveCom">등록</div> 
         </div>
     </div>
 
     <div class="main-section">
         <div class="writing-section">
             <div class="writing-s-c">
-                <div class="decoBox"></div>
+                <div class="decoBox">
+                    <div class="colorBox">
+                        <div id="BoxText" class="colorBox-text">오늘의 색</div>
+                        <div class="colorBox-color"></div>
+                    </div>
+                    <div class="stickerBox">
+                        <div id="BoxText" class="stickerBox-text">스티커</div>
+                        <img class="stickerBox-sticker" src="./image/starStickerBox.png">
+                    </div>
+                    <div class="imageBox">
+                        <div id="BoxText" class="imageBox-text">이미지</div>
+                        <img class="imageBox-image" src="./image/imageBox.png">
+                    </div>
+                </div>
                 <div class="textBox"></div>
             </div>
         </div>
